Improve Plant object.
